# InsituTranslate

./: .gitignore  AGENTS.bak  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
docs/: README.md  README_zh-CN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  commands.rs  db.rs  diagnostics.rs  domain.rs  features.rs  glossaries.rs  glossary_prompt.rs  languages.rs  lib.rs  main.rs  pdf_parsing.rs  secrets.rs  settings.rs  sqlite_paths.rs  system_fonts.rs  task_prompt.rs  task_scheduler.rs  translation_prompt.rs  translation_tasks.rs  vertex_ai.rs
src-tauri/src/document_parsing/: docx.rs  epub.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs  placeholders.rs  subtitle.rs  tag_corrector.rs  txt.rs  types.rs  xlsx.rs
src-tauri/src/translation/: context.rs  db.rs  glossary.rs  limiter.rs  mod.rs  request_options.rs  scheduler.rs  tests.rs  types.rs
src/components/layout/: AppShell.tsx  WindowTitleBar.tsx
src/components/ui/: action-callout.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  help-tooltip.tsx  input.tsx  loading-state.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  selectable-option-button.tsx  skeleton.tsx  slider.tsx  surface-list.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast-stack.tsx  tooltip.tsx
src/features/appearance/: AppearanceProvider.tsx  CustomThemeColorPicker.tsx  FontPicker.tsx  api.ts  constants.ts  theme-colors.ts  types.ts
src/features/assistants/: AssistantDetailsPanel.tsx  AssistantIcon.tsx  AssistantIconPicker.tsx  AssistantIdentityDialog.tsx  AssistantListItem.tsx  AssistantPromptDialog.tsx  constants.ts  customParameters.ts  types.ts
src/features/glossary/: api.ts  languages.ts  types.ts
src/features/languages/: LanguageCombobox.tsx  languageOptions.ts
src/features/providers/: AvatarPickerPopover.tsx  ProviderAvatar.tsx  constants.ts  (+8 more)
src/lib/: motion.ts  session-cache.ts
src/views/: AppearanceSettingsPage.tsx  AssistantSettingsPage.tsx  GlossaryPage.tsx  ProofreadingPage.tsx  ProviderSettingsPage.tsx  StartPage.tsx  TranslationTasksPage.tsx
(+10 files in other folders)
