[package]
name = "insitu-translate"
version = "0.1.0"
description = "Local multi-format document translation desktop application"
authors = ["InsituTranslate"]
edition = "2021"

[lib]
name = "insitu_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
fontdb = "0.23"
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
url = "2"
