[package]
name = "insitu-translate"
version = "0.1.0"
description = "Local multi-format document translation desktop application"
authors = ["InsituTranslate"]
edition = "2021"

[lib]
name = "insitu_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aho-corasick = "1.1"
calamine = "0.35.0"
comrak = { version = "0.28", default-features = false }
docx-rs = { version = "0.4.20", default-features = false }
futures-util = "0.3"
fastrand = "2.4.1"
fontdb = "0.23"
jsonwebtoken = "9"
lib-epub = { version = "0.3.1", features = ["builder", "content-builder"] }
lrc = "0.1.8"
markup5ever_rcdom = "0.39.0"
pdf_oxide = { version = "0.3", default-features = false }
quick-xml = "0.36"
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
scraper = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
subparse = "0.7.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
text-splitter = { version = "0.32", features = ["tiktoken-rs"] }
tiktoken-rs = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
unicode-segmentation = "1"
url = "2"
xml5ever = "0.39.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
